# src/routes/auth.route.js
@@ -1,5 +1,6 @@
 import express from 'express';
-import { register, login } from '../controllers/auth.controller.js';
+import passport from 'passport';
+import { register, login, googleCallback } from '../controllers/auth.controller.js';
 import { validate } from '../middlewares/validate.middleware.js';
 import { loginSchema, registerSchema } from '../validators/user.validation.js';
 
@@ -7,5 +8,8 @@ const router = express.Router();
 
 router.post('/register', validate(registerSchema), register);
 router.post('/login', validate(loginSchema), login);
+
+router.get('/google', passport.authenticate('google'));
+router.get('/google/callback', passport.authenticate('google', { session: false }), googleCallback);
 
 export default router;
